[metadata]
name = pytest-rich
author = Bruno Oliveira
author_email = nicoddemus@gmail.com
maintainer = Bruno Oliveira
maintainer_email = nicoddemus@gmail.com
license = MIT
url = https://github.com/nicoddemus/pytest-rich
description = Leverage rich for richer test session output
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
package_dir=
    =src
packages=find:
py_modules = pytest_rich
python_requires = >=3.9
install_requires =
    attrs
    pytest >= 7.0
    rich

[options.extras_require]
dev =
    black
    flake8
    freezegun
    mypy
    pre-commit
    reorder-python-imports
    tox
    types-attrs

[options.packages.find]
where=src

[options.entry_points]
pytest11 =
    rich = pytest_rich.plugin
